kubernetes/infrastructure/vault-secrets-operator/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vault-secrets-operator
  labels:
    app.kubernetes.io/name: vault-secrets-operator
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
